# CMakeCatchTemplate

./: CMakeLists.txt
CMake/: FindEigen.cmake
Code/: mpMyFunctions.cpp  mpMyFunctions.h
Code/Apps/: CMakeLists.txt  mpMyFirstApp.cpp
Testing/: mpBasicTest.cpp
Testing/Data/: file_input_test.txt
